Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2102

Exceeding reject queue policy under a transaction causes broker crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.5
    • 0.6
    • C++ Broker
    • None

    Description

      To reproduce:

      Start a broker.
      Use qpid-tool to create a queue with a reject policy and a count limit of 5.
      Enqueue 10 records under a single transaction to that queue.
      Prepare and commit the transaction.
      Broker crashes.

      Attachments

        1. QPID-2102.patch
          59 kB
          Gordon Sim

        Activity

          People

            Unassigned Unassigned
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: