QPID-2102: Changed QueuePolicy to rely on external locking and require dequeues to be handled by policy user rather.            (r817742 introduced a deadlock in ring queue policy which this checkin fixes)

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@819505 13f79535-47bb-0310-9956-ffa450edef68